// Original file: proto/random.proto

import type { TodoResponse as _randomPackage_TodoResponse, TodoResponse__Output as _randomPackage_TodoResponse__Output } from '../randomPackage/TodoResponse';

export interface TodoResponseList {
  'todos'?: (_randomPackage_TodoResponse)[];
}

export interface TodoResponseList__Output {
  'todos'?: (_randomPackage_TodoResponse__Output)[];
}
